Merge main branch and resolve conflicts
Co-authored-by: atomicdeploy <242969723+atomicdeploy@users.noreply.github.com>